--- a/config.json
+++ b/config.json
@@ -17,7 +17,7 @@
     "ignoreCommand": []
   },
   "adminBot": [
-    "61578138235901",
+    "61586462310017",
     "61579139963916"
   ],
   "whiteListMode": {
@@ -25,7 +25,7 @@
     "whiteListIds": [],
     "notes": "if you enable this feature, only the ids in the whiteListIds section can use the bot"
   },
-  "nickNameBot": "Your Jamai",
+  "nickNameBot": "Pakhi",
   "prefix": ".",
   "database": {
     "type": "mongodb",
